freebsd-glue (0.1.4) UNRELEASED; urgency=low

  * Implement srandomdev().

 -- Robert Millan <rmh@debian.org>  Mon, 02 Sep 2013 16:49:24 +0200

freebsd-glue (0.1.3) unstable; urgency=low

  * linkaddr.c is kFreeBSD-specific.

 -- Robert Millan <rmh@debian.org>  Tue, 06 Aug 2013 18:14:14 +0200

freebsd-glue (0.1.2) unstable; urgency=low

  * Add <sys/_stdint.h> to fix buildability of <libutil.h>.

 -- Robert Millan <rmh@debian.org>  Tue, 06 Aug 2013 17:22:40 +0200

freebsd-glue (0.1.1) unstable; urgency=low

  * Put includes of <sys/kern/*.h> OUTSIDE the header protection (which
    they intentionally duplicate).
  * FreeBSD <stdio.h> and <sys/types.h> have a kludge to declare
    lseek(). Duplicate the Glibc declaration here.
  * <sys/stat.h> implicitly includes <sys/time.h>.
  * Add trimdomain, link_addr and link_ntoa.

 -- Robert Millan <rmh@debian.org>  Sun, 04 Aug 2013 18:20:40 +0200

freebsd-glue (0.1.0) unstable; urgency=low

  * Fix header pollution in <unistd.h> by moving non-trivial inline
    functions into static objects of their own.
  * Add nlm_syscall() inline function.

 -- Robert Millan <rmh@debian.org>  Sun, 04 Aug 2013 16:21:56 +0200

freebsd-glue (0.0.10) unstable; urgency=low

  [ Guillem Jover ]
  * Switch to canonical Vcs URLs.

  [ Robert Millan ]
  * Add <net/ethernet.h> which includes <netinet/ether.h> (for
    ether_ntoa).

 -- Robert Millan <rmh@debian.org>  Thu, 01 Aug 2013 21:17:17 +0200

freebsd-glue (0.0.9) unstable; urgency=low

  * Make <sys/_types.h> and <machine/_types.h> usable on non-kFreeBSD.

 -- Robert Millan <rmh@debian.org>  Mon, 22 Jul 2013 21:55:14 +0200

freebsd-glue (0.0.8) unstable; urgency=low

  * Include <grp.h> in <unistd.h> (for initgroups).
  * Add __containerof() to <sys/cdefs.h>.
  * Add roundup2 in <sys/param.h>. It is no longer provided by glibc
    (??).

 -- Robert Millan <rmh@debian.org>  Tue, 16 Jul 2013 15:21:09 +0200

freebsd-glue (0.0.7) unstable; urgency=low
